# QPT

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.MD  RELEASE.MD  ReleaseTips.md  ToDo.MD  setup.py
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: ----.md  bug_report.md  report-issue.md  report-issue.yml  report.md  together-we-build.md
.github/workflows/: build_qpt.yml  codeql.yml  issue.yml  python-publish.yml
CSharp/ProgressBar/: App.xaml  MainWindow.xaml  MainWindow.xaml.cs  WpfApp2.csproj
CSharp/launcher/: Program.cs  launcher.csproj
MFC/ProgressBar/: ProgressBar.cpp  ProgressBar.h  ProgressBar.rc  ProgressBar.sln  ProgressBar.vcxproj  ProgressBar.vcxproj.filters  ProgressBarDlg.cpp  ProgressBarDlg.h  resource.h
QPTSFX/: QPTSFX.cpp  QPTSFX.sln  QPTSFX.vcxproj  QPTSFX.vcxproj.filters
ago/: Debug-收集Debug信息.cmd  _qpt_venv.py
ago/clr/: progressbar.py
ago/qt_ui/: GDMAdmin.ui  GUI_module_launcher.py  GUI_unzip.py  qpt_about.py  (+5 more)
dev/: make_requirements.sh  requirements.txt
informal_essay/: README.md
qpt/: RELEASE  __init__.py  _compatibility.py  command.py  executable.py  executor.py  memory.py  module.py  run.py  run_wrapper.py  smart_opt.py  sys_info.py  version.py
qt_ui/: GDMLauncher_dialog.ui  GDMUI.xlsx  TEST.py  TEST2.py  unzip.py  welcome.ui
sandbox/: creat_module.py  run_module.py
unit_test/: cli.py  create_sandbox_module.py  create_unit_module.py  debug_module.py  run_ext_test.py  run_test.py  test_module.py  ut_run_module.py
unit_test/sanbox_pdm/: .pdm.toml  main.py  pyproject.toml  qpt2exe.py
(+138 files in other folders)
